# gtkmm-plplot

./: .gitignore  .travis.yml  Makefile.am  README.md  annotated.html  appveyor.yml  azure-pipelines.yml  canvas_8h.html  canvas_8h__dep__incl.map  canvas_8h__dep__incl.md5  canvas_8h__incl.map  canvas_8h__incl.md5  canvas_8h_source.html  class_gtk_1_1_p_lplot_1_1_canvas-members.html  class_gtk_1_1_p_lplot_1_1_canvas.html  class_gtk_1_1_p_lplot_1_1_canvas__inherit__graph.map  class_gtk_1_1_p_lplot_1_1_canvas__inherit__graph.md5  class_gtk_1_1_p_lplot_1_1_exception-members.html  class_gtk_1_1_p_lplot_1_1_exception.html  class_gtk_1_1_p_lplot_1_1_exception__inherit__graph.map  class_gtk_1_1_p_lplot_1_1_exception__inherit__graph.md5  class_gtk_1_1_p_lplot_1_1_legend-members.html  class_gtk_1_1_p_lplot_1_1_legend.html  class_gtk_1_1_p_lplot_1_1_legend__inherit__graph.map  class_gtk_1_1_p_lplot_1_1_legend__inherit__graph.md5  class_gtk_1_1_p_lplot_1_1_object-members.html  class_gtk_1_1_p_lplot_1_1_object.html  class_gtk_1_1_p_lplot_1_1_object__inherit__graph.map  class_gtk_1_1_p_lplot_1_1_object__inherit__graph.md5  class_gtk_1_1_p_lplot_1_1_plot-members.html  class_gtk_1_1_p_lplot_1_1_plot.html  class_gtk_1_1_p_lplot_1_1_plot2_d-members.html  class_gtk_1_1_p_lplot_1_1_plot2_d.html  class_gtk_1_1_p_lplot_1_1_plot2_d__inherit__graph.map  class_gtk_1_1_p_lplot_1_1_plot2_d__inherit__graph.md5  class_gtk_1_1_p_lplot_1_1_plot2_d_data-members.html  class_gtk_1_1_p_lplot_1_1_plot2_d_data.html  class_gtk_1_1_p_lplot_1_1_plot2_d_data__inherit__graph.map  class_gtk_1_1_p_lplot_1_1_plot2_d_data__inherit__graph.md5  class_gtk_1_1_p_lplot_1_1_plot3_d-members.html  (+348 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml
docs/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  doc-postprocess.pl  doxygen_hack.css  extra_pages.dox  meson.build
docs/images/: Makefile.am
gtkmm-plplot/: Makefile.am  canvas.cpp  canvas.h  color.h  enums.h  exception.h  filelist.am  gtkmm-plplot.h  gtkmm-plplotconfig.h.in  gtkmm-plplotconfig.h.meson  legend.cpp  legend.h  linestyle.h  meson.build  object.h  plot.cpp  plot.h  plot2d.cpp  plot2d.h  plot2ddata.cpp  plot2ddata.h  plot3d.cpp  plot3d.h  plotabstract.cpp  plotabstract.h  plotcontour.cpp  plotcontour.h  plotcontourshades.cpp  plotcontourshades.h  plotdata.cpp  plotdata.h  plotdata2d.cpp  plotdata2d.h  plotdata2derrorx.cpp  plotdata2derrorx.h  plotdata2derrorxy.cpp  plotdata2derrorxy.h  plotdata2derrory.cpp  plotdata2derrory.h  plotdata3d.cpp  (+35 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  (+227 more)
tests/: Makefile.am  contour-test.csv  meson.build  srm1155.csv  srm1155.xmsi  srm1155.xmso  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
